--- a/stackgres-k8s/src/admin-ui/public/style.css
+++ b/stackgres-k8s/src/admin-ui/public/style.css
@@ -234,14 +234,14 @@ svg.background circle {
 
 #signup input {
     display: block;
-    border: 1px solid var(--gray2);
+    /* border: 1px solid var(--gray2); */
     border-radius: 6px;
     padding: 10px 12px;
     height: 38px;
     width: 300px;
-    background: #fff;
+    /* background: #fff; */
     font-size: 12px;
-    color: var(--gray5);
+    /* color: var(--gray5); */
 }
 
 #signup input:first-of-type {
@@ -1866,9 +1866,14 @@ ul.selector li {
     background-position-x: 15px;
 }
 
-#backups .timestamp, #backups .managedLifecycle {
+#backups .timestamp {
     min-width: 210px;
     width: 210px;
+}
+
+#backups .managedLifecycle {
+    min-width: 225px;
+    width: 225px;
 }
 
 #backups .details.Failed div {
@@ -2780,13 +2785,13 @@ td.timestamp, span.timestamp {
 }
 
 #backups .phase {
-    width: 120px;
-    min-width: 120px;
+    min-width: 265px;
+    width: 265px;
 }
 
 #backups .size {
-    min-width: 240px;
-    width: 240px;
+    min-width: 265px;
+    width: 265px;
 }
 
 #backups .postgresVersion {
@@ -2803,9 +2808,9 @@ td.timestamp span.ms, span.timestamp span.ms {
     padding-left: 0;
 } */
 
-tr.details tr {
+/* tr.details tr {
     background: transparent !important;
-}
+} */
 
 table table {
     margin-left: -15px;
@@ -3056,9 +3061,9 @@ table.backupConfig tr:nth-child(4n-2), table.backupConfig tr:nth-child(4n-2) + t
     background: #fff;
 }
 
-table.backupConfig tr.base.open {
+/* table.backupConfig tr.base.open {
     border-top: 1px solid #f0f0f1;
-}
+} */
 
 /*table.backups tr.details td:first-of-type table:first-of-type tbody {
     border: 1px solid;*/
@@ -3416,9 +3421,9 @@ table.logs .userName {
 }
 
 table.logs .databaseName {
-    min-width: 100px;
-    max-width: 100px;
-    width: 100px;
+    min-width: 110px;
+    max-width: 110px;
+    width: 110px;
     padding: 0 10px;
 }
 
@@ -3430,9 +3435,9 @@ table.logs .processId {
 }
 
 table.logs .connectionFrom {
-    min-width: 150px;
-    max-width: 150px;
-    width: 150px;
+    min-width: 160px;
+    max-width: 160px;
+    width: 160px;
     padding: 0 10px;
 }
 
@@ -3634,7 +3639,7 @@ th.sysId, th.operation {
 
 .logMessage .param {
     /*color: var(--blue);*/
-    color: #4D4F5C;
+    /* color: #4D4F5C; */
     font-weight: bold;
     width: 200px;
     display: table-cell;
@@ -3687,9 +3692,9 @@ table.logs table.logMessage tr, #backups .details thead {
     border-top: none;
 }
 
-.logDetails tr {
+/* .logDetails tr {
     background: transparent !important;
-}
+} */
 
 .logDetails td, .logMessage td {
     padding-left: 15px;
@@ -3698,7 +3703,7 @@ table.logs table.logMessage tr, #backups .details thead {
 .logDetails td.param {
     min-width: 200px;
     /*color: var(--blue);*/
-    color: #4D4F5C;
+    /* color: #4D4F5C; */
     font-weight: bold;
     border-right: 1px solid #F0F0F1;
 }
@@ -4019,14 +4024,20 @@ table.loading:after {
     content: " ";
     position: fixed;
     top: 289px;
-    right: 48px;
+    right: 45px;
     width: calc(100vw - 439px);
-    height: calc(100vh - 341px) !important;
+    height: calc(100vh - 314px) !important;
     background: url(img/loader.gif) center center no-repeat rgba(255,255,255,.7);
-    background-size: 80px;
+    background-size: 4vw;
     opacity: 1;
     transition: opacity .4s ease-in;
 }
+
+.darkmode table.loading:after {
+    background: url(img/loader.gif) center center no-repeat rgba(6, 5, 40, .6);
+    background-size: 4vw;
+}
+
 table.logs tbody, table.backups > tbody {
     max-height: initial;
     max-width: initial;
@@ -4071,9 +4082,9 @@ tr.logInfo > td {
     width: 100%;
 }
 
-table.logs tr {
+/* table.logs tr {
     background: #fafafa;
-}
+} */
 
 table.logs tr.base {
     display: inline-block;
@@ -4081,9 +4092,9 @@ table.logs tr.base {
     position: relative;
 }
 
-table.logs tr:nth-child(4n), table.logs tr:nth-child(4n) + tr.logInfo {
+/* table.logs tr:nth-child(4n), table.logs tr:nth-child(4n) + tr.logInfo {
     background: #fff;
-}
+} */
 
 table.logs tr.base td {
     height: 50px;
@@ -4145,9 +4156,9 @@ td.logMessage, th.logMessage {
 }
 
 table.logs .podName {
-    min-width: 85px;
+    min-width: 90px;
     width: auto;
-    max-width: 85px;
+    max-width: 90px;
 }
 
 .options label.active span {
@@ -4372,15 +4383,15 @@ table.backupConfig th.name {
 }
 
 #backup .retention {
-    width: 95px;
+    width: 100px;
 }
 
 #backup .compression {
-    width: 165px;
+    width: 180px;
 }
 
 #backup .storageType {
-    width: 114px;
+    width: 125px;
 }
 
 table.backupConfig tr.details.open {
