--- a/doc/themes/sg-doc/layouts/partials/custom-footer.html
+++ b/doc/themes/sg-doc/layouts/partials/custom-footer.html
@@ -53,4 +53,8 @@
   function navToggle() {
     $('.mobileMenu, #header').toggleClass('menuOpen')
   }
+
+  function toggleDiv(id) {
+    $(id).toggleClass('show')
+  }
 </script>
